Metodos com parametros do tipo int, escopo de variaveis